k8s-examples/alb-echo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
spec:
  type: ClusterIP
  selector:
    app: echo
  ports:
    - name: http
      port: 80
      targetPort: 8080
